flux/system/traefik-configs/middleware_https_redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: https-redirect

spec:
  redirectScheme:
    scheme: https
    permanent: true
