flux/system/traefik-configs/middleware_traefik_dashboard_auth.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: traefik-dashboard-auth

spec:
  basicAuth:
    secret: traefik-dashboard-auth
