flux/system/traefik-configs/ingressroute_traefik_dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute

metadata:
  name: traefik-dashboard

spec:
  routes:
    - kind: Rule
      match: Host(`traefik.ops.bootleg.technology`)
      middlewares:
        - name: traefik-dashboard-auth
          namespace: traefik
      services:
        - kind: TraefikService
          name: api@internal
